Move SearchQuery to model package