@@ -3,7 +3,6 @@ package org.jabref.model.search;
 import java.io.IOException;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.jabref.model.database.BibDatabaseContext;
 import org.jabref.model.entry.BibEntry;
@@ -24,7 +23,6 @@ import org.apache.lucene.search.highlight.TextFragment;
 public final class SearchResult {
 
     private final String path;
-
     private final int pageNumber;
     private final long modified;
     private final String entryId;
@@ -37,10 +35,9 @@ public final class SearchResult {
         this.path = getFieldContents(searcher, scoreDoc, SearchFieldConstants.PATH);
         this.luceneScore = scoreDoc.score;
         if (!this.path.isEmpty()) {
-            // pdf result
+            this.entryId = "";
             this.pageNumber = Integer.parseInt(getFieldContents(searcher, scoreDoc, SearchFieldConstants.PAGE_NUMBER));
             this.modified = Long.parseLong(getFieldContents(searcher, scoreDoc, SearchFieldConstants.MODIFIED));
-            this.entryId = "";
 
             String content = getFieldContents(searcher, scoreDoc, SearchFieldConstants.CONTENT);
             String annotations = getFieldContents(searcher, scoreDoc, SearchFieldConstants.ANNOTATIONS);
@@ -52,7 +49,7 @@ public final class SearchResult {
             try {
                 try (TokenStream contentStream = analyzer.tokenStream(SearchFieldConstants.CONTENT, content)) {
                     TextFragment[] frags = highlighter.getBestTextFragments(contentStream, content, true, 10);
-                    this.contentResultStringsHtml = Arrays.stream(frags).map(TextFragment::toString).collect(Collectors.toList());
+                    this.contentResultStringsHtml = Arrays.stream(frags).map(TextFragment::toString).toList();
                 }
             } catch (InvalidTokenOffsetsException e) {
                 this.contentResultStringsHtml = List.of();
@@ -60,12 +57,11 @@ public final class SearchResult {
 
             try (TokenStream annotationStream = analyzer.tokenStream(SearchFieldConstants.ANNOTATIONS, annotations)) {
                 TextFragment[] frags = highlighter.getBestTextFragments(annotationStream, annotations, true, 10);
-                this.annotationsResultStringsHtml = Arrays.stream(frags).map(TextFragment::toString).collect(Collectors.toList());
+                this.annotationsResultStringsHtml = Arrays.stream(frags).map(TextFragment::toString).toList();
             } catch (InvalidTokenOffsetsException e) {
                 this.annotationsResultStringsHtml = List.of();
             }
         } else {
-            // Found somewhere in the bib entry
             this.entryId = getFieldContents(searcher, scoreDoc, SearchFieldConstants.BIB_ENTRY_ID);
             this.pageNumber = -1;
             this.modified = -1;
@@ -77,15 +73,21 @@ public final class SearchResult {
         if (!this.path.isEmpty()) {
             return getEntriesWithFile(path, databaseContext);
         }
-        return databaseContext.getEntries().stream().filter(bibEntry -> bibEntry.getId().equals(entryId)).collect(Collectors.toList());
+        return databaseContext.getEntries().stream().filter(bibEntry -> bibEntry.getId().equals(entryId)).toList();
     }
 
     private List<BibEntry> getEntriesWithFile(String path, BibDatabaseContext databaseContext) {
-        return databaseContext.getEntries().stream().filter(entry -> entry.getFiles().stream().map(LinkedFile::getLink).anyMatch(link -> link.equals(path))).collect(Collectors.toList());
+        return databaseContext.getEntries()
+                              .stream()
+                              .filter(entry ->
+                                      entry.getFiles()
+                                           .stream()
+                                           .map(LinkedFile::getLink)
+                                           .anyMatch(link -> link.equals(path)))
+                              .toList();
     }
 
-    private String getFieldContents(IndexSearcher searcher, ScoreDoc scoreDoc, String
-        field) throws IOException {
+    private String getFieldContents(IndexSearcher searcher, ScoreDoc scoreDoc, String field) throws IOException {
         IndexableField indexableField = searcher.storedFields().document(scoreDoc.doc).getField(field);
         if (indexableField == null) {
             return "";
